--- a/4/4.md
+++ b/4/4.md
@@ -1,3 +1,6 @@
+<h3>Navegación:<br>
+
+[🔙](../3/3.md) 3.Especificacón de módulos | [📜](../README.md) ÍNDICE | [👉🏼](../5.md) 5. Modelo Conceptual
 # 4. Especificación de Requerimientos y Prototipo
 
 ## 4.1. Módulos y Códigos de Requerimientos
@@ -11,75 +14,159 @@
             <td>Código</td>
         </tr>
         <tr>
+            <td rowspan=4>1</td>
+            <td rowspan=4><a href="4.1/4.1.md">Logueo y seguridad</td>
             <td>1</td>
-            <td><a href="4.1/4.1.md">Logueo y seguridad</td>
-            <td>1</td>
-            <td>Nombre del requerimiento</td>
+            <td>Autenticación de usuario</td>
             <td>R001</td>
         </tr>
         <tr>
             <td>2</td>
-            <td><a href="4.2/4.2.md">Usuario</td>
-            <td>2</td>
-            <td>Nombre del requerimiento</td>
+            <td>Olvido de contraseña</td>
             <td>R002</td>
         </tr>
         <tr>
             <td>3</td>
-            <td><a href="4.3/4.3.md">Arrendamiento</td>
-            <td>3</td>
-            <td>Nombre del requerimiento</td>
+            <td>Asignación de permisos según rol</td>
             <td>R003</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Creación de nuevo rol</td>
+            <td>R004</td>
+        </tr>
+        <tr>
+            <td rowspan=4>2</td>
+            <td rowspan=4><a href="4.2/4.2.md">Usuario</td>
+            <td>1</td>
+            <td>Crear empleado</td>
+            <td>R005</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Ver los usuarios vigentes</td>
+            <td>R006</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Renovar contrato de empleado</td>
+            <td>R007</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Ver los usuarios desvinculados</td>
+            <td>R008</td>
+        </tr>
+        <tr>
+            <td rowspan=3>3</td>
+            <td rowspan=3><a href="4.3/4.3.md">Arrendamiento</td>
+            <td>1</td>
+            <td>Gestionar los contrato de arrendamiento</td>
+            <td>R009</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Gestionar los locales comerciales</td>
+            <td>R010</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Gestionar los detalles del contrato de cada inquilino</td>
+            <td>R011</td>
         </tr>
         <tr>
             <td rowspan="4">4</td>
             <td rowspan="4"><a href="4.4/4.4.md">Inquilino</td>
             <td>1</td>
             <td>Crear un nuevo Inquilino</td>
-            <td>R001</td>
+            <td>R012</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Editar un inquilino</td>
-            <td>R002</td>
+            <td>R013</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Eliminar o dar de baja a un inquilino</td>
-            <td>R003</td>
+            <td>R014</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Gestionar la renovación de contratos</td>
-            <td>R004</td>
+            <td>R015</td>
         </tr>        
         <tr>
-            <td>5</td>
-            <td><a href="4.5/4.5.md">Facturación y Pagos</td>
-            <td>5</td>
-            <td>Nombre del requerimiento</td>
-            <td>R005</td>
+            <td rowspan="3">5</td>
+            <td rowspan="3"><a href="4.5/4.5.md">Facturación y Pagos</td>
+            <td>1</td>
+            <td>Generación Automática de Facturas</td>
+            <td>R016</td>
         </tr>
         <tr>
-            <td>6</td>
-            <td><a href="4.6/4.6.md">Recobro</td>
-            <td>6</td>
-            <td>Nombre del requerimiento</td>
-            <td>R006</td>
+            <td>2</td>
+            <td>Envío de Recordatorios de Pago</td>
+            <td>R017</td>
         </tr>
         <tr>
-            <td>7</td>
-            <td><a href="4.7/4.7.md">Eventos</td>
-            <td>7</td>
-            <td>Nombre del requerimiento</td>
-            <td>R007</td>
+            <td>3</td>
+            <td>Registro de Pagos</td>
+            <td>R018</td>
+        </tr>  
+        <tr>
+            <td rowspan="4">6</td>
+            <td rowspan="4"><a href="4.6/4.6.md">Recobro</td>
+            <td>1</td>
+            <td>Visualizacion de recobros</td>
+            <td>R019</td>
+        </tr>
+            <td>2</td>
+            <td>Envío de solicitud de recobros</td>
+            <td>R020</td>
         </tr>
         <tr>
-            <td>8</td>
-            <td><a href="4.8/4.8.md">Mantenimiento y Servicio</td>
-            <td>8</td>
-            <td>Nombre del requerimiento</td>
-            <td>R008</td>
+            <td>3</td>
+            <td>Planificacion del proyecto de recobro</td>
+            <td>R021</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Supervision del proyecto</td>
+            <td>R022</td>
+        </tr> 
+        <tr>
+            <td rowspan=3>7</td>
+            <td rowspan=3><a href="4.7/4.7.md">Eventos</td>
+            <td>1</td>
+            <td>Definir un espacio común cómo disponible para eventos o módulos.</td>
+            <td>R0023</td>
+        </tr>
+        </tr>
+            <td>2</td>
+            <td>Enviar solicitud para usar una zona.</td>
+            <td>R024</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Aprovar el uso de una zona.</td>
+            <td>R025</td>
+        </tr>
+        <tr>
+            <td rowspan=3>8</td>
+            <td rowspan=3><a href="4.8/4.8.md">Mantenimiento y Servicio</td>
+            <td>1</td>
+            <td>Definir y programar actividades de mantenimiento en cada instalación</td>
+            <td>R026</td>
+        </tr>
+        </tr>
+            <td>2</td>
+            <td>Registrar todas las actividades de mantenimiento realizadas en cada instalación</td>
+            <td>R027</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Registrar incidencia para mantenimiento correctivo</td>
+            <td>R028</td>
         </tr>
     </tbody>
 </table>
