--- a/0/0.md
+++ b/0/0.md
@@ -1,3 +1,6 @@
+<h3>Navegación:<br>
+
+| [📜](../README.md) ÍNDICE | [👉🏼](../1.md) 1. Descripción de la Empresa Elegida
 # 0. Acerca del Grupo
 
 ## Empressa
