--- a/1/1.md
+++ b/1/1.md
@@ -1,3 +1,6 @@
+<h3>Navegación:<br>
+
+[🔙](../0/0.md) 0. Acerca del grupo | [📜](../README.md) ÍNDICE | [👉🏼](../2/2.md) 2.Especificación de Procesos
 # 1. Descripción de la Empresa 
 ## MallPlaza
 <img src = "https://safecitying.com/wp-content/uploads/2023/08/mallplaza-entrada.png" withd="150" height="200">
