--- a/2/2.md
+++ b/2/2.md
@@ -1,3 +1,6 @@
+<h3>Navegación:<br>
+
+[🔙](../1/1.md) 1. Descripción de la Empresa | [📜](../README.md) ÍNDICE | [👉🏼](../3/3.md) 3. Especificación de Módulos
 # 2. Especificación de Procesos
 
 En Mallplaza entre sus diferentes móudlos hemos podido identificar diferentes procesos que se siguen para la gestión de arrendamientos de los espacios de sus sedes; desde el asignación de espacios y contratos hasta el mantenimiento y pagos de estos.
