--- a/3/3.md
+++ b/3/3.md
@@ -1,3 +1,6 @@
+<h3>Navegación:<br>
+
+[🔙](../2/2.md) 2. Especificación de Procesos | [📜](../README.md) ÍNDICE | [👉🏼](../4/4.md) 4. Especificación de Requerimientos y Prototipo
 # Especificacion de módulos
 En este capítulo se detallan las especificaciones de los módulos que componen el sistema de gestión de arrendamientos y espacios en MallPlaza
 
