--- a/4/4.md
+++ b/4/4.md
@@ -1,6 +1,6 @@
 <h3>Navegación:<br>
 
-[🔙](../3/3.md) 3.Especificacón de módulos | [📜](../README.md) ÍNDICE | [👉🏼](../5.md) 5. Modelo Conceptual
+[🔙](../3/3.md) 3.Especificacón de módulos | [📜](../README.md) ÍNDICE | [👉🏼](../5/5.md) 5. Modelo Conceptual
 # 4. Especificación de Requerimientos y Prototipo
 
 ## 4.1. Módulos y Códigos de Requerimientos
