--- a/5/5.md
+++ b/5/5.md
@@ -5,5 +5,5 @@
 En este capítulo, se presenta el Modelo Conceptual del sistema de gestión de arrendamientos y espacios de MallPlaza. El objetivo de este modelo es capturar la estructura lógica del sistema a través de la identificación de las entidades clave, sus atributos, y las relaciones entre ellas, sin considerar aspectos técnicos o de implementación en bases de datos. Este modelo facilita la comprensión inicial del dominio del problema y sirve como base para el diseño de modelos más detallados.
 
 ## CONTENIDO
-- 5.1. [Diagrama Entidad Relación](5/5.1.md)
-- 5.2. [Diccionario de Datos](5/5.2.md)
+- 5.1. [Diagrama Entidad Relación](5.1.md)
+- 5.2. [Diccionario de Datos](5.2.md)
