--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -36,9 +36,16 @@ envío de recordatorios de pago.
 
 ## 5. Módulo de Facturación y Pagos
 ### Responsabilidades
-- 
+- Generación de facturas basadas en contratos de arrendamiento.
+- Envío de recordatorios de pago a los inquilinos.
+- Registro y actualización de pagos realizados por los inquilinos.
 ### Interacción con otros módulos
-- 
+- Arrendamiento: Obtiene los términos de los contratos para generar facturas y actualizar condiciones de pago.
+- Inquilino: Recibe información del estado de los inquilinos (activos, morosos) para emitir facturas y recordatorios.
+- Recobro: Envía información sobre deudas pendientes para activar procesos de recobro.
+- Logueo y Seguridad: Controla los permisos de acceso a la información financiera.
+- Eventos: Factura por el alquiler de espacios para eventos.
+- Mantenimiento y Servicio: Añade cargos adicionales por servicios especiales solicitados por los inquilinos.
 
 ## 6. Módulo Recobro
 Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios extras que el inquilino requiera para su negocio.
