--- a/6/6.md
+++ b/6/6.md
@@ -1,6 +1,6 @@
 <h3>Navegación:<br>
 
-[🔙](../4/4.md) 3. Especificación de Requirimientos y Prototipo | [📜](../README.md) ÍNDICE | [👉🏼](../6/6.md) 6. Modelo Relacional
+[🔙](../5/5.md) 5. Modelo Conceptual | [📜](../README.md) ÍNDICE 
 # 6. Modelo Relacional
 En este capítulo, se expone el Modelo Relacional derivado del modelo conceptual. Se presenta cómo las entidades y relaciones del diagrama ER se traducen en tablas y relaciones entre ellas en una base de datos relacional. Se incluyen las reglas de normalización aplicadas para garantizar que la base de datos sea eficiente y esté libre de redundancias.
 
