--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -297,13 +297,13 @@ La entidad Contrato Empleado define los términos de empleo de un empleado.
 ---
 
 ## Entidad Espacio Común
-Se encuentran los espacios comunes que se pueden solicitar un uso
+Se encuentran los espacios comunes que se ponen a dispocición para ser utilizados
 
 | **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad**            | **Derivada de** | **Descripción (Corta)**                                                      |
 | -------------- | -------------- | ----------- | --------------------- | --------------------- | --------------- | ---------------------------------------------------------------------------- |
 | idEspacioComun | CHAR (10)      | x(10)       | No nulo, único        | N/A                   | N/A             | Código único asignado a cada espacio comercial.                              |
 | Área           | DECIMAL(10,2)  | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                      |
-| Ubicación      | CHAR           | X(64)       | No nulo               | N/A                   | N/A             | Ubicación del espacio comercial dentro de Mall Plaza.                        |
+| Ubicación      | CHAR           | X(64)       | No nulo               | N/A                   | N/A             | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular, no indica area que ocupará exactamente, solo que en ese espacio está el que se usará|
 | Estado         | CHAR (10)      | x(10)       | TAB1                  | N/A                   | N/A             | Estado actual del espacio comercial.                                         |
 | PrecioPorDia   | DECIMAL(10,2)  | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                              |
 | MotivoDeUso    | CHAR(50)       | Texto libre | Descripción detallada | N/A                   | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado. |
