--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -288,7 +288,7 @@ La entidad Contrato Empleado define los términos de empleo de un empleado.
 | IdContratoEmpleado    | CHAR(10)       | x(10)          | Único por contrato                   | N/A        | N/A             | Identificador único para cada contrato                   |
 | IdEmpleado            | CHAR(10)       | x(10)          | Relación con empleado                | N/A        | Empleado        | Identificador del empleado asociado al contrato          |
 | Fecha de Inicio       | DATE           | YYYY-MM-DD     | Fecha válida                         | Días       | N/A             | Fecha de inicio del contrato                             |
-| Fecha de Fin          | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días       | N/A             | Fecha de finalización del contrato, si es aplicable      |    
+| Fecha de Fin          | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días       | N/A             | Fecha de finalización del contrato, si es aplicable      |
 | Salario Base          | DECIMAL(10,2)  | Numérico(10,2) | Valor monetario                      | Moneda     | N/A             | Salario base asociado al contrato del empleado           |
 | Jornada Laboral       | VARCHAR(15)    | x(15)          | Completa, Parcial, Turno Rotativo    | N/A        | N/A             | Tipo de jornada que cubre el contrato                    |
 | Estado del Contrato   | VARCHAR(15)    | x(15)          | Activo, Finalizado, Suspendido       | N/A        | N/A             | Estado actual del contrato del empleado                  |
@@ -299,15 +299,14 @@ La entidad Contrato Empleado define los términos de empleo de un empleado.
 ## Entidad Espacio Común
 Se encuentran los espacios comunes que se ponen a dispocición para ser utilizados
 
-| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad**            | **Derivada de** | **Descripción (Corta)**                                                      |
-| -------------- | -------------- | ----------- | --------------------- | --------------------- | --------------- | ---------------------------------------------------------------------------- |
-| nombreEspacioComún | CHAR (10)      | x(10)       | No nulo, único        | N/A                   | N/A             | Nombre asignado a cada espacio comun.                              |
-| Área           | DECIMAL(10,2)  | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                      |
-| Ubicación      | CHAR           | X(64)       | No nulo               | N/A                   | N/A             | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular, no indica area que ocupará exactamente, solo que en ese espacio está el que se usará|
-| Estado         | CHAR (10)      | x(10)       | TAB1                  | N/A                   | N/A             | Estado actual del espacio comercial.                                         |
-| PrecioPorDia   | DECIMAL(10,2)  | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                              |
-| MotivoDeUso    | CHAR(50)       | Texto libre | Descripción detallada | N/A                   | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado. |
-
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad**            | **Derivada de** | **Descripción (Corta)**                                                                                                                                                              |
+| ------------------ | -------------- | ----------- | --------------------- | --------------------- | --------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| nombreEspacioComún | CHAR (10)      | x(10)       | No nulo, único        | N/A                   | N/A             | Nombre asignado a cada espacio comun.                                                                                                                                                |
+| Área               | DECIMAL(10,2)  | 9999999.99  | >0                    | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                                                                                                                                              |
+| Ubicación          | CHAR           | X(64)       | No nulo               | N/A                   | N/A             | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular, no indica area que ocupará exactamente, solo que en ese espacio está el que se usará |
+| Estado             | CHAR (10)      | x(10)       | TAB1                  | N/A                   | N/A             | Estado actual del espacio comercial.                                                                                                                                                 |
+| PrecioPorDia       | DECIMAL(10,2)  | 9999999.99  | >0                    | Moneda                | N/A             | Precio de alquilar el Espacio común por un día.                                                                                                                                      |
+| MotivoDeUso        | CHAR(50)       | Texto libre | Descripción detallada | N/A                   | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado.                                                                                                         |
 
 
 TAB1
@@ -317,3 +316,31 @@ TAB1
 | S1     | Ocupado          |
 | S2     | Disponible       |
 | S3     | En mantenimiento |
+
+
+## Entidad Evento
+Esta entidad almacena los eventos que se realizarán en el mall, con todos los detalles necesarios para su planificación y ejecución.
+
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                        |
+| ------------------- | -------------- | ----------- | ------------------- | ---------- | --------------- | ------------------------------------------------------------------------------ |
+| Nombre              | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre descriptivo del evento.                                                 |
+| Descripción         | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Breve descripción del evento.                                                  |
+| FechaInicio         | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de inicio del evento.                                                    |
+| FechaFin            | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de finalización del evento.                                              |
+| HorarioInicio       | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de inicio del evento.                                                     |
+| HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                               |
+| Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Identificador del espacio común donde se llevará a cabo el evento.             |
+| PúblicoObjetivo     | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).   |
+| Estado              | CHAR (10)      | x(10)       | TAB2                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).          |
+| AsistentesEsperados | INT            | 99999       | >0                  | Personas   | N/A             | Cantidad estimada de asistentes al evento.                                     |
+| Organizador         | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre o entidad organizadora del evento.                                      |
+| ContactoOrganizador | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Información de contacto del organizador (teléfono, email).                     |
+| PermisosLegales     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Detalle de los permisos legales obtenidos o necesarios para el evento.         |
+| EquiposTecnicos     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Lista de los equipos técnicos requeridos para el evento (sonido, luces, etc.). |
+| PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                 |
+
+### Consideraciones:
+- **Estado del Evento (TAB2):** Valores definidos: "Planeado", "En Curso", "Finalizado", "Cancelado".
+- **PúblicoObjetivo:** Valores definidos: "Familias", "Adultos", "Niños", etc.
+
+Este formato cubriría los datos esenciales para registrar y administrar eventos en un mall como Aventura Plaza. ¿Te gustaría agregar algún otro campo específico?
