--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -311,11 +311,11 @@ Se encuentran los espacios comunes que se ponen a dispocición para ser utilizad
 
 TAB1
 
-| CODIGO | DESCRIPCIÓN      |
-| ------ | ---------------- |
-| S1     | Ocupado          |
-| S2     | Disponible       |
-| S3     | En mantenimiento |
+| **CODIGO** | **DESCRIPCIÓN**  |
+| ---------- | ---------------- |
+| S1         | Ocupado          |
+| S2         | Disponible       |
+| S3         | En mantenimiento |
 
 
 ## Entidad Evento
@@ -330,8 +330,8 @@ Esta entidad almacena los eventos que se realizarán en el mall, con todos los d
 | HorarioInicio       | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de inicio del evento.                                                     |
 | HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                               |
 | Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Identificador del espacio común donde se llevará a cabo el evento.             |
-| PúblicoObjetivo     | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).   |
-| Estado              | CHAR (10)      | x(10)       | TAB2                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).          |
+| PúblicoObjetivo     | CHAR (50)      | Texto libre | TAB2                | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).   |
+| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).          |
 | AsistentesEsperados | INT            | 99999       | >0                  | Personas   | N/A             | Cantidad estimada de asistentes al evento.                                     |
 | Organizador         | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre o entidad organizadora del evento.                                      |
 | ContactoOrganizador | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Información de contacto del organizador (teléfono, email).                     |
@@ -339,8 +339,23 @@ Esta entidad almacena los eventos que se realizarán en el mall, con todos los d
 | EquiposTecnicos     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Lista de los equipos técnicos requeridos para el evento (sonido, luces, etc.). |
 | PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                 |
 
-### Consideraciones:
-- **Estado del Evento (TAB2):** Valores definidos: "Planeado", "En Curso", "Finalizado", "Cancelado".
-- **PúblicoObjetivo:** Valores definidos: "Familias", "Adultos", "Niños", etc.
+### TAB1 - Estado del Evento
 
-Este formato cubriría los datos esenciales para registrar y administrar eventos en un mall como Aventura Plaza. ¿Te gustaría agregar algún otro campo específico?
+| **CODIGO** | **DESCRIPCIÓN** |
+| ---------- | --------------- |
+| E1         | Planeado        |
+| E2         | En Curso        |
+| E3         | Finalizado      |
+| E4         | Cancelado       |
+
+### TAB2 - Público Objetivo
+
+| **CODIGO** | **DESCRIPCIÓN**  |
+| ---------- | ---------------- |
+| P1         | Familias         |
+| P2         | Adultos          |
+| P3         | Niños            |
+| P4         | Jóvenes          |
+| P5         | Personas Mayores |
+
+Estas tablas pueden ser referenciadas en los atributos correspondientes de la **Entidad Evento** para establecer el estado y el público objetivo con valores predefinidos, asegurando consistencia en los registros.
