--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -321,22 +321,21 @@ TAB1
 ## Entidad Evento
 Esta entidad almacena los eventos que se realizarán en el mall, con todos los detalles necesarios para su planificación y ejecución.
 
-| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                        |
-| ------------------- | -------------- | ----------- | ------------------- | ---------- | --------------- | ------------------------------------------------------------------------------ |
-| Nombre              | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre descriptivo del evento.                                                 |
-| Descripción         | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Breve descripción del evento.                                                  |
-| FechaInicio         | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de inicio del evento.                                                    |
-| FechaFin            | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de finalización del evento.                                              |
-| HorarioInicio       | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de inicio del evento.                                                     |
-| HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                               |
-| Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Identificador del espacio común donde se llevará a cabo el evento.             |
-| PúblicoObjetivo     | CHAR (50)      | Texto libre | TAB2                | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).   |
-| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).          |
-| Organizador         | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre o entidad organizadora del evento.                                      |
-| ContactoOrganizador | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Información de contacto del organizador (teléfono, email).                     |
-| PermisosLegales     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Detalle de los permisos legales obtenidos o necesarios para el evento.         |
-| EquiposTecnicos     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Lista de los equipos técnicos requeridos para el evento (sonido, luces, etc.). |
-| PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                 |
+| **Atributo**        | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad** | **Derivada de** | **Descripción (Corta)**                                                                         |
+| ------------------- | -------------- | ----------- | ------------------- | ---------- | --------------- | ----------------------------------------------------------------------------------------------- |
+| Nombre              | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre descriptivo del evento.                                                                  |
+| Descripción         | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Breve descripción del evento.                                                                   |
+| FechaInicio         | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de inicio del evento.                                                                     |
+| FechaFin            | DATE           | YYYY-MM-DD  | No nulo             | N/A        | N/A             | Fecha de finalización del evento.                                                               |
+| HorarioInicio       | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de inicio del evento.                                                                      |
+| HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                                                |
+| Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular. |
+| PúblicoObjetivo     | CHAR (50)      | Texto libre | TAB2                | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).                    |
+| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).                           |
+| Organizador         | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre o entidad organizadora del evento.                                                       |
+| ContactoOrganizador | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Información de contacto del organizador (teléfono, email).                                      |
+| EquiposTecnicos     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Lista de los equipos técnicos requeridos para el evento (sonido, luces, etc.).                  |
+| PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                                  |
 
 ### TAB1 - Estado del Evento
 
