--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -331,10 +331,7 @@ Esta entidad almacena los eventos que se realizarán en el mall, con todos los d
 | HorarioFin          | TIME           | HH:MM:SS    | No nulo             | N/A        | N/A             | Hora de finalización del evento.                                                                |
 | Ubicación           | CHAR (64)      | Texto libre | No nulo             | N/A        | Espacio Común   | Marca la coordenada de inicio y final en el plano del mapa se considera una región rectangular. |
 | PúblicoObjetivo     | CHAR (50)      | Texto libre | TAB2                | N/A        | N/A             | Perfil del público al que está dirigido el evento (familias, jóvenes, etc.).                    |
-| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).                           |
-| Organizador         | CHAR (100)     | Texto libre | No nulo             | N/A        | N/A             | Nombre o entidad organizadora del evento.                                                       |
-| ContactoOrganizador | CHAR (50)      | Texto libre | No nulo             | N/A        | N/A             | Información de contacto del organizador (teléfono, email).                                      |
-| EquiposTecnicos     | CHAR (255)     | Texto libre | No nulo             | N/A        | N/A             | Lista de los equipos técnicos requeridos para el evento (sonido, luces, etc.).                  |
+| Estado              | CHAR (10)      | x(10)       | TAB1                | N/A        | N/A             | Estado actual del evento (planeado, en curso, finalizado, cancelado).                           |                                     |
 | PresupuestoEstimado | DECIMAL (10,2) | 9999999.99  | >0                  | Moneda     | N/A             | Costo estimado para la realización del evento.                                                  |
 
 ### TAB1 - Estado del Evento
