--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -61,6 +61,7 @@ Contiene información clave sobre el acuerdo de arrendamiento, con atributos par
 | fechaVencimiento | DATE           | YYYY-MM-DD  | Fecha válida, no nulo      | N/A        | N/A             | Fecha de vencimiento del contrato.            |
 | estado           | CHAR(20)       | x(20)       | Activo, Expirado, Renovado | N/A        | N/A             | Estado actual del contrato.                   |
 | condición        | CHAR(100)      | x(100)      | Nulo permitido             | N/A        | N/A             | Condiciones especiales asociadas al contrato. |
+| porcentaje       | DECIMAL (2,2)  | 99.99       | No nulo                    | N/A        | N/A             | Porcentaje de las ventas que serviran para calular el monto final de la renta.  |
 
 Recobro: Solicitud especifica sobre un servicio extra que la empresa realice para el inquilino
 
@@ -176,14 +177,13 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 ## Entidad Espacio comercial
 Representa los modulos y tiendas que se encuentran en Mall Plaza.
 
-| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad**            | **Derivada de** | **Descripción (Corta)**                               |
-| ------------------ | -------------- | ----------- | ------------------- | --------------------- | --------------- | ----------------------------------------------------- |
-| idEspacioComercial | CHAR (10)      | x(10)       | No nulo, único      | N/A                   | N/A             | Código único asignado a cada espacio comercial.       |
+| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos** | **Unidad**       | **Derivada de** | **Descripción**                       |
+| ------------------ | -------------- | ----------- | ------------------- | ---------------- | --------------- | ------------------------------------- |
+| idEspacioComercial | CHAR (10)      | x(10)       | No nulo, único      | N/A              | N/A             | Código único asignado a cada espacio comercial.       |
 | Tipo de inmueble   | CHAR (10)      | x(10)       | TAB2                | N/A                   | N/A             | Clasificación del inmueble.                           |
 | Área               | DECIMAL(10,2)  | 9999999.99  | >0                  | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.               |
-| Tamaño             | CHAR (10)      | x(10)       | TAB3                | N/A                   | N/A             | Clasificación del tamaño del espacio comercial        |
-| Ubicación          | CHAR           | X(64)       | No nulo             | N/A                   | N/A             | Ubicación del espacio comercial dentro de Mall Plaza. |
-| Estado             | CHAR (10)      | x(10)       | TAB4                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
+| Estado             | CHAR (10)      | x(10)       | TAB3                | N/A                   | N/A             | Estado actual del espacio comercial.                  |
+| Tarifa             | DECIMAL (10,2) | 9999999.99  | >0               | N/A                   | N/A             | Indica el precio por metro cuadrado que se debera pagar por el alquiler del espacio comercial. |
 
 TAB2
 
@@ -194,25 +194,12 @@ TAB2
 
 TAB3
 
-| CODIGO | DESCRIPCIÓN   |
-| ------ | ------------- |
-| T1     | Pequeño       |
-| T2     | Mediano       |
-| T3     | Grande        |
-| T4     | Departamental |
-
-TAB3
-
 | CODIGO | DESCRIPCIÓN      |
 | ------ | ---------------- |
 | S1     | Ocupado          |
 | S2     | Disponible       |
 | S3     | En mantenimiento |
 
-
-Aquí tienes los diccionarios semánticos para las entidades **Factura**, **Recordatorio**, y **Pago**, siguiendo el formato que solicitaste:
-
----
 
 ## **Entidad Factura**  
 La entidad Factura representa los documentos emitidos por el sistema para cobrar los montos pendientes a los inquilinos. Cada factura detalla los términos del cobro, como el monto total, fecha de emisión y estado de la factura (si está pagada o pendiente).
